--- a/styles.css
+++ b/styles.css
@@ -537,6 +537,29 @@ ol
     border-radius: 0px;
 
 }
+.bi-arrow-left-square-fill{
+    font-size: 3em;
+    color: rgb(250, 250, 250);
+}
+.bi-arrow-right-square-fill{
+    font-size: 3em;
+    color: rgb(250, 250, 250);
+}
+.bi-arrow-left-circle-fill{
+    font-size: 3em;
+    color: #971F5F;
+}
+.bi-arrow-right-circle-fill{
+    font-size: 3em;
+    color: #971F5F;
+}
+.owl-dots{
+    display: none !important;
+}
+.about_us_titulo_img{
+    height: 50px !important;
+    width: 100px !important;;  
+}
 
 @media screen and (max-width: 1200px){
     .about_us_caracteristicas{
@@ -554,7 +577,6 @@ ol
         width: 250px;
         border-radius: 50px;
         object-fit: cover;
-
         border: 1px solid #E4E4E4;
         box-shadow: 0px 4px 4px 0px #00000040;
     }
@@ -586,6 +608,19 @@ ol
     .about_us_caracteristicas{
         width: 526px;
     }
+    .bi-arrow-left-square-fill{
+        font-size: 3em;
+        color: #971F5F;
+    }
+    .bi-arrow-right-square-fill{
+        font-size: 3em;
+        color: #971F5F;
+    }
+    .owl-carousel .owl-dots.disabled, .owl-carousel .owl-nav.disabled{
+        display: block !important;
+    }
+        
+    
 }
 
 @media screen and (max-width: 800px){
@@ -632,12 +667,6 @@ ol
     .testimonials_panel_color_uno{
         display: none;
     }
-    .testimonials div {
-    
-    }
-    .best_sellers_card{
-
-    }
     .w-50 {
         width: 100%!important;
     }
@@ -663,15 +692,32 @@ ol
     .navbar-nav{
         display: none !important;
     }
-}
-@media screen and (max-width: 400px){
-    .about_us_caracteristicas{
-        margin-top: 1400px;
-        height: 300px;
-        width: 60%;     
-    }
     .about_us_contenido_contenedor{
         width: 100%;
         height: 1500px;
+        padding: 20px;   
+    }
+    .about_us_informacion{
+        width: 100%;
+    }
+    .testimonials_panel_color_uno{
+        display: none;
+    }
+    .about_us_contenido_contenedor {
+        height: 1000px;
+    }
+    .about_us_caracteristicas{
+        margin-top: 700px;
+    } 
+}
+@media screen and (max-width: 400px){
+    .about_us_contenido_contenedor {
+        height: 1200px;
+    }
+    .about_us_caracteristicas{
+        margin-top: 900px;
+    }
+    .hero_top_boton{
+        width: 200px !important;
     }
 }
