--- a/styles.css
+++ b/styles.css
@@ -707,6 +707,13 @@ video{
     }
     .header_top{
         display: none !important;
+    }
+    #nav_logo{
+        height: 80px;
+        width: 80px;
+    }
+    .mb-3{
+        margin-bottom: 0px !important;
     } 
 }
 @media screen and (max-width: 470px){
