--- a/styles.css
+++ b/styles.css
@@ -714,6 +714,9 @@ video{
     }
     .mb-3{
         margin-bottom: 0px !important;
+    }
+    .Subscribe_to_Newsletter form input{
+        margin-bottom: 15px;
     } 
 }
 @media screen and (max-width: 470px){
