--- a/css/styles.css
+++ b/css/styles.css
@@ -249,110 +249,11 @@ video{
     width: 100%;
     display: flex;
 }
-.about_us_contenido_contenedor{
-    width: 90%;
-    height: 700px;
-    background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 77.42%);
-    padding: 50px 50px;
-    padding-right: 30%; 
-    clip-path: polygon(0 1%, 100% 0, 70% 100%, 0% 100%);
-    margin-top: 10%;
-}
-.about_us_titulo{
-    font-family: Poppins-BoldItalic;
-    font-size: 45px;
-    font-style: italic;
-    line-height: 68px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #FFFFFF;
-
-}
-.about_us_informacion{
-    width: 80%;
-}
-.about_us_informacion article h6{
-    font-family: Poppins-ExtraBoldItalic;
-    font-size: 25px;
-    line-height: 38px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: #FFFFFF;
-    display: inline !important;
-}
-.about_us_informacion article p{
-    font-family: Ubuntu-BoldItalic;
-    font-size: 16px;
-    line-height: 18px;
-    letter-spacing: 0em;
-    text-align: left;
-    display: inline !important;
-    color: #FFFFFF;
-}
-
-.about_us_boton{
-    height: 52px;
-    width: 274px;
-    border-radius: 15px;
-    background: #FFFFFF;
-    box-shadow: -4px 3px 0px 0px #30053780;
-    font-family: Poppins-ExtraBoldItalic;
-    font-size: 25px;
-    line-height: 38px;
-    letter-spacing: 0em;
-    text-align: center;
-
-}
-
-.about_us_img{
-    position: absolute;
-    height: 100%;
-    width: 50%;
-    right: 0px;
-    margin-bottom:50px ;
-    border-radius: 30px;
-    clip-path: polygon(26% 0, 100% 0, 100% 70%, 87% 100%, 0 100%);
-    z-index: 0;
-}
-
-.about_us_caracteristicas{
-    position: absolute;
-    height: 100px;
-    width: 726px;
-    right: 0px;
-    border-radius: 25px;
-    background: #FFFFFF;
-    box-shadow: 0px 4px 4px 0px #00000040;
-    z-index: 100px;
-    margin-top: 600px;
-    margin-right: 15%;
-}
-
-.about_us_caracteristicas ul li div{
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
-    background: linear-gradient(180deg, #681240 0%, #971F5F 100%);
-}
-.about_us_caracteristicas ul li p{
-    font-family: Ubuntu-BoldItalic;
-    font-size: 20px;
-    line-height: 23px;
-    letter-spacing: 0em;
-    text-align: left;
-}
-.about_us_caracteristicas ul li div img{
-    height: 50px;
-    width: 50px;
-    left: 415px;
-    top: 2003px;
-    border-radius: 0px;
-}
 
 /*------ Shop by category ------*/
 
 .shop_by_category{
-    margin-top: 300px !important;
+    margin-top: 100px !important;
 }
 .shop_by_category_titulo{
     font-family: Poppins-BoldItalic;
@@ -536,6 +437,11 @@ video{
     border-radius: 0px;
 
 }
+a{
+    color: white !important;
+    text-decoration: none;
+    background-color: transparent;
+}
 .bi-arrow-left-square-fill{
     font-size: 3em;
     color: rgb(250, 250, 250);
@@ -555,15 +461,10 @@ video{
 .owl-dots{
     display: none !important;
 }
-.about_us_titulo_img{
-    height: 30px !important;
-    width: 60px !important;;  
-}
+
 
 @media screen and (max-width: 1200px){
-    .about_us_caracteristicas{
-        margin-top: 800px;
-    }
+
     .shop_by_category_card_img{
         height: 200px;
         width: 250px;
@@ -582,10 +483,7 @@ video{
 }
     
 @media screen and (max-width: 950px){
-    .about_us_caracteristicas{
-        margin-top: 750px;
 
-    }
     .shop_by_category_container{
         flex-direction: column !important;
     }
@@ -625,47 +523,12 @@ video{
     
 }
 
-@media screen and (max-width: 800px){
-    .about_us_img{
-        display: none;
-
-    }
-    .about_us_caracteristicas{
-        margin-top: 850px;
-        height: 300px;
-        width: 60%;
-
-        
-    }
-    .about_us_caracteristicas ul{
-        flex-direction: column !important;
-        
-    }
-    .about_us_caracteristicas ul li{
-        margin-top: 10px;
-        
-    }
-    .about_us_contenido_contenedor{
-        width: 100%;
-        height: 900px;
-    }
-    
-}
-
 @media screen and (max-width: 650px){
     .hero_redes_sociales {
         margin-right: 40%;
         z-index: 100;
     }
-    .about_us_caracteristicas{
-        margin-top: 1000px;
-        height: 300px;
-        width: 60%;     
-    }
-    .about_us_contenido_contenedor{
-        width: 100%;
-        height: 1000px;
-    }
+
     .testimonials_panel_color_uno{
         display: none;
     }
@@ -674,16 +537,7 @@ video{
     }
 }
 @media screen and (max-width: 500px){
-    .about_us_caracteristicas{
-        margin-top: 1200px;
-        height: 300px;
-        width: 60%;     
-    }
-    .about_us_contenido_contenedor{
-        width: 100%;
-        height: 1200px;
-        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
-    }
+
     .hero_top_titulo{
         font-size: 40px;
     }
@@ -691,23 +545,11 @@ video{
         font-size: 20px;
         width: 100px
     }
-    .about_us_contenido_contenedor{
-        width: 100%;
-        height: 1500px;
-        padding: 20px;   
-    }
-    .about_us_informacion{
-        width: 100%;
-    }
+
     .testimonials_panel_color_uno{
         display: none;
     }
-    .about_us_contenido_contenedor {
-        height: 1000px;
-    }
-    .about_us_caracteristicas{
-        margin-top: 800px;
-    }
+
     .header_top{
         display: none !important;
     }
@@ -723,19 +565,11 @@ video{
     }
 }
 @media screen and (max-width: 470px){
-    .about_us_contenido_contenedor {
-        height: 1200px;
-    }
-    .about_us_caracteristicas{
-        margin-top: 1000px;
-    }
+
     .hero_top_boton{
         width: 200px !important;
     }
-    .about_us_titulo_img {
-        height: 30px !important;
-        width: 60px !important;
-    }
+
     .testimonials_titulo {
         font-size: 28px;
     }
