--- a/css/styles.css
+++ b/css/styles.css
@@ -25,24 +25,17 @@ header{
 }
 .header_top{
     top: 0px;
-    flex-grow: 1;
-    justify-content: center;
-    align-items: center;
+}
+.nav-item{
+    cursor: pointer;
 }
 .header_color{
     background-color: white;
 }
 .navbar{
     top: 0px;
-    flex-grow: 1;
 }
-.navbar div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-}
+
 .nav-link{
     font-family: Ubuntu-BoldItalic;
     font-size: 20px !important;
@@ -56,6 +49,8 @@ header{
     width: 129px;
     left: 41px;
 }
+
+/*----- hero */
 .hero{
     height: 720px;
     width: 100%;
