--- a/css/about.css
+++ b/css/about.css
@@ -27,158 +27,104 @@ body{
     src: url('../PRUEBA/FUENTES/Poppins-Bold.ttf');
 }
 /*------ About Us ------*/
-.about_us{
-    width: 100%;
-    display: flex;
-    margin-top: 100px;
-    margin-bottom: 300px;
-}
-.about_us_contenido_contenedor{
-    width: 90%;
-    height: 700px;
-    background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 77.42%);
-    padding: 50px 50px;
-    padding-right: 30%; 
-    clip-path: polygon(0 1%, 100% 0, 70% 100%, 0% 100%);
+
+.about_contenido_contenedor{ 
     margin-top: 10%;
 }
-.about_us_titulo{
+.about_titulo{
     font-family: Poppins-BoldItalic;
-    font-size: 45px;
+    font-size: 40px;
     font-style: italic;
     line-height: 68px;
     letter-spacing: 0em;
     text-align: left;
-    color: #FFFFFF;
+    color: #971F5F;
 
 }
-.about_us_informacion{
-    width: 80%;
-}
-.about_us_informacion article h6{
+.about_informacion article h6{
     font-family: Poppins-ExtraBoldItalic;
     font-size: 25px;
     line-height: 38px;
     letter-spacing: 0em;
     text-align: left;
-    color: #FFFFFF;
+    color: #7e0131;
     display: inline !important;
 }
-.about_us_informacion article p{
+.about_informacion article p{
     font-family: Ubuntu-BoldItalic;
     font-size: 16px;
     line-height: 18px;
     letter-spacing: 0em;
     text-align: left;
     display: inline !important;
-    color: #FFFFFF;
+    color: #7e0131;
 }
 
-.about_us_boton{
+.about_boton{
     height: 52px;
     width: 274px;
     border-radius: 15px;
-    background: #FFFFFF;
+    background: #971F5F;
     box-shadow: -4px 3px 0px 0px #30053780;
     font-family: Poppins-ExtraBoldItalic;
     font-size: 25px;
     line-height: 38px;
     letter-spacing: 0em;
     text-align: center;
+    color: #FFFFFF;
+    border: none;
+    transform: skew(-10deg, 0deg);
 
 }
+.about_boton:hover{
+    background: #da117c;
+    color: #FFFFFF;
 
-.about_us_img{
-    position: absolute;
-    height: 100%;
-    width: 50%;
-    right: 0px;
-    margin-bottom:50px ;
-    border-radius: 30px;
-    clip-path: polygon(26% 0, 100% 0, 100% 70%, 87% 100%, 0 100%);
-    z-index: 0;
 }
-
-.about_us_caracteristicas{
-    position: absolute;
-    height: 100px;
-    width: 726px;
+.about_caracteristicas{
     right: 0px;
     border-radius: 25px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px 0px #00000040;
     z-index: 100px;
-    margin-top: 600px;
-    margin-right: 15%;
 }
 
-.about_us_caracteristicas ul li div{
+.about_caracteristicas ul li div{
     height: 70px;
     width: 70px;
     border-radius: 50%;
     background: linear-gradient(180deg, #681240 0%, #971F5F 100%);
 }
-.about_us_caracteristicas ul li p{
+.about_caracteristicas ul li p{
     font-family: Ubuntu-BoldItalic;
     font-size: 20px;
     line-height: 23px;
     letter-spacing: 0em;
     text-align: left;
 }
-.about_us_caracteristicas ul li div img{
+.about_caracteristicas ul li div img{
     height: 50px;
     width: 50px;
     left: 415px;
     top: 2003px;
     border-radius: 0px;
 }
-.about_us_titulo_img {
+.about_titulo_img {
     height: 50px !important;
     width: 100px !important;
 }
-
-
-@media screen and (max-width: 1200px){
-    .about_us_caracteristicas{
-        margin-top: 800px;
-    }
-}
-    
-@media screen and (max-width: 950px){
-    .about_us_caracteristicas{
-        margin-top: 750px;
-
-    }
-    .about_us_caracteristicas{
-        width: 526px;
-    }   
+/*------ -------*/
+.Newsletter_about{
+    background: #c711725e;
 }
 
 @media screen and (max-width: 800px){
-    .about_us_img{
-        display: none;
-
+    .about_caracteristicas ul{
+        flex-direction: column !important; 
     }
-    .about_us_caracteristicas{
-        margin-top: 850px;
-        height: 300px;
-        width: 60%;
-
-        
+    .about_caracteristicas ul li{
+        flex-direction: column !important; 
     }
-    .about_us_caracteristicas ul{
-        flex-direction: column !important;
-        
-    }
-    .about_us_caracteristicas ul li{
-        margin-top: 10px;
-        
-    }
-    .about_us_contenido_contenedor{
-        width: 100%;
-        height: 900px;
-    }
-    
 }
 
 @media screen and (max-width: 650px){
