--- a/css/styles.css
+++ b/css/styles.css
@@ -17,25 +17,13 @@ body{
     font-family: Ubuntu-BoldItalic;
     src: url('../PRUEBA/FUENTES/Ubuntu-BoldItalic.ttf');
 }
-header{
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    
-}
-.header_top{
-    top: 0px;
-}
-.nav-item{
-    cursor: pointer;
-}
+/*------header------*/
 .header_color{
     background-color: white;
 }
 .navbar{
     top: 0px;
 }
-
 .nav-link{
     font-family: Ubuntu-BoldItalic;
     font-size: 20px !important;
@@ -44,48 +32,45 @@ header{
     text-align: left !important;
     color: #971F5F !important; 
 }
-.nav_logo{
-    height: 131px;
-    width: 129px;
-    left: 41px;
+.header_top_nav{
+    font-size: 1.2em;
 }
+.header_top_nav:hover{
+    color: #da117c !important;
+}
+.header_top_nav_color{
+    color: #971F5F !important;
+}
+.nav-link:hover{
+    color: #da117c !important;
+}
+.collapse{
+    display: none !important;
+}
+.nav_redes_sociales {
+    color: white !important;
+}
+
 
 /*----- hero */
-.hero{
-    height: 720px;
-    width: 100%;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    flex-direction: column;
-}
+
 video{
-    position: absolute;
     z-index: -1;
-    width: 100%;
-    height: 720px;
     object-fit: cover;
   }
-
 .hero_top{
     z-index: 10;
-    width: 100%;
-    justify-content: center;
-    align-items: flex-end;
-    flex-grow: 1; 
 }
-
 .hero_top_titulo{
     font-family: Poppins-ExtraBoldItalic;
     font-size: 80px;
-    font-style: italic;
     line-height: 120px;
     letter-spacing: 0em;
     text-align: right;
     color: #FFFFFF;
     text-shadow: -5px 4px #300537;
     z-index: 10;
-    margin-right:15%;
+    margin-right:13%;
 }
 
 .hero_top_boton{
@@ -93,31 +78,30 @@ video{
     width: 311.5px !important;
     border-radius: 15px;
     background: #FF9900;
+    border: none;
     box-shadow: -4px 3px 0px 0px #300537;
     font-family: Poppins-ExtraBoldItalic;
     font-size: 30px;
     line-height: 45px;
     letter-spacing: 0em;
-    text-align: left;
     color: #FFFFFF;
     text-shadow: 2px 2px #000000;
     text-align: center;
     z-index: 10;
     margin-right:15%;
+    transform: skew(-20deg, 0deg);
+}
+.hero_top_boton:hover{
+    background: #ff790c;
 }
 .hero_panel_color_uno{
-    position: absolute;
-    height: 720px;
     width: 60%;
     right: 0px;
     top: 0px;
     background: linear-gradient(180deg, rgba(48, 5, 55, 0.8) 0%, rgba(151, 31, 95, 0.8) 100%);
     clip-path: polygon(60% 0, 100% 0, 100% 100%, 0 100%);
-
 }
 .hero_panel_color_dos{
-    position: absolute;
-    height: 720px;
     width: 40%;
     right: 0px;
     top: 0px;
@@ -125,18 +109,16 @@ video{
     clip-path: polygon(80% 0, 100% 0, 100% 100%, 0 100%);
 }
 .hero_redes_sociales_item{
-    top: 90%;
-    height: 15px;
-    width: 15px;
-    left: 168px;
-    top: 646px;
+    height: 40px !important;
+    width: 40px !important;
     border-radius: 10px;
 }
-.nav-item i{
-    height: 20px;
-    width: 20px;
-    margin: 0px 10px;
+.hero_redes_sociales_item i{
+    font-size: 25px;
     color: white;
+}
+.nav-item i{
+    margin: 0px 10px;
 }
 .hero_redes_sociales {
     margin-right:80%;
@@ -144,42 +126,41 @@ video{
 .hero_redes_sociales li {
     list-style: none;
     margin: 0px 10px;
-    height: 30px;
-    width: 30px;
     border-radius: 50%;
     background: linear-gradient(90deg, #300537 0%, #971F5F 87.96%);
     outline: 2px solid #FFFFFF80;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
-
-.hero_redes_sociales i {
-    height: 15px;
-    width: 15px;
-    color: white;
-    padding-bottom:  25px;
+.hero_redes_sociales_item i:hover {
+    cursor: pointer;
+    color: #da117c;
 }
 
 /*----------- SECCIONES  -----------*/
+.seccion_titulo{
+    font-family: Poppins-BoldItalic;
+    font-size: 40px;
+    line-height: 60px;
+    letter-spacing: 0em;
+    color: #971F5F;
+    margin-left: 5%;
+}
+
 /*------ Best seller ------*/
 @font-face {
     font-family: Poppins-BoldItalic;
     src: url('../PRUEBA/FUENTES/Poppins-BoldItalic.ttf');
 }
 .best_sellers{
-    margin: 100px 0px;
+    padding: 50px 0px;
 }
 .best_sellers_titulo{
     font-family: Poppins-BoldItalic;
     font-size: 45px;
     font-style: italic;
-    font-weight: 700;
     line-height: 68px;
     letter-spacing: 0em;
     text-align: left;
     color: #971F5F;
-    ;
 }
 
 .best_sellers_boton{
@@ -196,6 +177,10 @@ video{
     text-align: center;
     color: #FFFFFF;
     box-shadow: 2px 2px 0px 0px #00000033;
+    transform: skew(-20deg, 0deg);
+}
+.best_sellers_boton:hover{
+    background: #ff790c;
 }
 .best_sellers_card{
     height: 366px;
@@ -204,6 +189,7 @@ video{
     background: #FFFDFD;
     border: 1px solid #E4E4E4;
     box-shadow: 0px 4px 4px 0px #00000040;
+    transform: skew(-7deg, 0deg);
 }
 .best_sellers_card img{
     height: 195px;
@@ -238,17 +224,142 @@ video{
     margin-top: 95%;
     margin-left:30%;
 }
+.icon_carrito{
+    top: 165px;
+    left: 180px;
+    height: 55px;
+    width: 56px;
+    border-radius: 50%;
+    background: linear-gradient(90deg, #300537 0%, #971F5F 87.96%);
+}
+.icon_carrito i{
+    font-size: 30px;
+    color: white;
+}
 
 /*------ About Us ------*/
 .about_us{
-    width: 100%;
-    display: flex;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+.about_us_contenido_contenedor{
+    width: 90%;
+    height: 700px;
+    background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 77.42%);
+    padding: 50px 0px;
+    padding-right: 30%; 
+    clip-path: polygon(0 1%, 100% 0, 70% 100%, 0% 100%);
+    margin-top: 10%;
+}
+.about_us_titulo{
+    font-family: Poppins-BoldItalic;
+    font-size: 45px;
+    font-style: italic;
+    line-height: 68px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+
+}
+.about_us_informacion{
+    margin-top: 20px ;
+    width: 80%;
+}
+.about_us_informacion article h6{
+    font-family: Poppins-ExtraBoldItalic;
+    font-size: 25px;
+    line-height: 38px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+    display: inline !important;
+}
+.about_us_informacion article p{
+    font-family: Ubuntu-BoldItalic;
+    font-size: 16px;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+    display: inline !important;
+    color: #FFFFFF;
+}
+
+.about_us_boton{
+    height: 52px;
+    width: 274px;
+    border-radius: 15px;
+    background: #FFFFFF;
+    box-shadow: -4px 3px 0px 0px #30053780;
+    font-family: Poppins-ExtraBoldItalic;
+    font-size: 25px;
+    line-height: 38px;
+    letter-spacing: 0em;
+    text-align: center;
+    transform: skew(-20deg, 0deg);
+    border: none;
+    color: #971F5F;
+    text-shadow: 2px 2px 0px 0px #00000033;
+}
+
+.about_us_boton:hover{
+    background: #da117c;
+}
+
+.about_us_img{
+    position: absolute;
+    height: 90%;
+    width: 50%;
+    right: 0px;
+    margin-bottom:50px ;
+    border-radius: 30px;
+    clip-path: polygon(26% 0 , 100% 0 , 100% 70%, 90% 100%, 0 100%);
+    z-index: 0;
+}
+
+
+.about_us_caracteristicas{
+    position: absolute;
+    height: 100px;
+    width: 680px;
+    right: 0px;
+    border-radius: 25px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    z-index: 100px;
+    margin-top: 600px;
+    margin-right: 15%;
+}
+
+.about_us_caracteristicas ul li div{
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background: linear-gradient(180deg, #681240 0%, #971F5F 100%);
+}
+.about_us_caracteristicas ul li p{
+    font-family: Ubuntu-BoldItalic;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+.about_us_caracteristicas ul li div img{
+    height: 50px;
+    width: 50px;
+    left: 415px;
+    top: 2003px;
+    border-radius: 0px;
+}
+.about_us_titulo_img {
+    height: 50px !important;
+    width: 100px !important;
 }
 
 /*------ Shop by category ------*/
 
 .shop_by_category{
-    margin-top: 100px !important;
+    margin-top: 0px !important;
+    padding: 50px 0px;
 }
 .shop_by_category_titulo{
     font-family: Poppins-BoldItalic;
@@ -261,13 +372,14 @@ video{
 .shop_by_category_container{
     margin-top: -4% !important;
 }
+
 .shop_by_category_card_img{
     height: 366px;
     width: 351.24383544921875px;
     border-radius: 50px;
     border: 1px solid #E4E4E4;
     box-shadow: 0px 4px 4px 0px #00000040;
-
+    transform: skew(-5deg, 0deg);
 }
 .shop_by_category_card_img img{
     height: 366px;
@@ -289,6 +401,7 @@ video{
     letter-spacing: 0em;
     text-align: center;
     color: #FFFFFF;
+    transform: skew(-8deg, 0deg);
 
 }
 
@@ -298,13 +411,36 @@ video{
 .shop_by_category_card:last-child{
     margin-top: -20%;
 }
+.shop_by_category_boton{
+    height: 52px;
+    width: 274px;
+    right: 30px;
+    border-radius: 15px;
+    background: #FF9900;
+    box-shadow: -4px 3px 0px 0px #30053780;
+    font-family: Poppins-ExtraBoldItalic;
+    font-size: 25px;
+    line-height: 38px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: #FFFFFF;
+    box-shadow: 2px 2px 0px 0px #00000033;
+    transform: skew(-20deg, 0deg);
+}
+
+.shop_by_category_boton:hover{
+    background: #ff790c;
+}
+
 
 /*------- Testimonials -------*/
 
 .testimonials{
+    margin-top: 100px !important;
     width: 100%;
     border-radius: 0px;
     background: #971F5F17;
+
 }
 .testimonials_titulo{
     font-family: Poppins-BoldItalic;
@@ -340,24 +476,66 @@ video{
     line-height: 38px;
     letter-spacing: 0em;
     text-align: center;
+    transform: skew(-20deg, 0deg);
 
 }
 .testimonials_panel_color_uno{
-    height: 730px;
-    width: 600px;
+    height: 625px;
+    width: 700px;
     border-radius: 0px;
     background: linear-gradient(180deg, #300537 16.04%, #971F5F 116.04%);
     clip-path: polygon(100% 0, 100% 42%, 67% 100%, 0 100%, 58% 0);
     position: absolute;
     right: 0px;
-    margin-top: -270px;
+    margin-top: -65px;
+}
+.testimonials_panel_color_dos{
+    height: 300px;
+    width: 200px;
+    border-radius: 0px;
+    background: linear-gradient(180deg, #300537 16.04%, #971F5F 116.04%);
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+    position: absolute;
+    right: 0px;
+    margin-top: 260px;
 
 }
+.testimonials_boton{
+    margin-top: 20px;
+    height: 52px;
+    width: 274px;
+    border-radius: 15px;
+    background: #FF9900;
+    box-shadow: -4px 3px 0px 0px #30053780;
+    font-family: Poppins-ExtraBoldItalic;
+    font-size: 25px;
+    line-height: 38px;
+    letter-spacing: 0em;
+    text-align: center;
+    color: #FFFFFF;
+    box-shadow: 2px 2px 0px 0px #00000033;
+    transform: skew(-20deg, 0deg);
+}
+.testimonials_boton:hover{
+    background-color: #da117c !important;
+}
 
+.testimonials_card{
+    margin-top: 20px;
+}
+.testimonials_titulo_img{
+    left: 0px;
+}
 .owl-dots{
     display: none;
 }
+.owl-nav{
+    display: flex;
+    justify-content: end;
+    margin-right: 20%;
+}
 /*------- Subscribe_to_Newsletter -------*/
+
 .Subscribe_to_Newsletter h2{
     font-family: Poppins-BoldItalic;
     font-size: 45px;
@@ -367,12 +545,13 @@ video{
     color:#971F5F;
 }
 .Subscribe_to_Newsletter form input{
-    width: 274px;
+    width: 474px;
     height: 52px;
     border-radius: 15px;
     box-shadow: -4px 3px 0px 0px #30053780;
     background: #e6e4e4;
     border: none;
+    transform: skew(-20deg, 0deg);
 }
 .Subscribe_to_Newsletter form div button{
     height: 52px;
@@ -387,6 +566,11 @@ video{
     text-align: left;
     color: white;
     border: none;
+    transform: skew(-20deg, 0deg);
+}
+
+.Subscribe_to_Newsletter form div button:hover{
+    background: #ff790c;
 }
 
 /*------- Footer -------*/
@@ -397,9 +581,14 @@ video{
 .footer_info{
     background: linear-gradient(89.71deg, #300537 23.22%, #971F5F 92.95%);
 }
-
+.footer_info div img{
+    cursor: pointer;
+}
 .footer_info div ul li{
+    display: flex;
     color: white;
+    list-style: none;
+    align-items: center;
 }
 
 .footer_info div{
@@ -415,9 +604,17 @@ video{
 
 }
 .footer_info div img{
-    height: 209px;
-    width: 203px;
+    width: 103px;
     border-radius: 0px;
+
+}
+.punto{
+    height: 10px;
+    width: 10px;
+    background-color: #FF289B9C;
+    border-radius: 50%;
+    flex-grow: 0;
+    margin-right: 10px;
 
 }
 .footer_b{
@@ -427,31 +624,28 @@ video{
     color: white;
 }
 .footer_b img{
-    height: 30px;
-    width: 94.18604278564453px;
+    width: 80px;
     border-radius: 0px;
+    cursor: pointer;
 
 }
-a{
+
+footer a{
+    display: flex;
     color: white !important;
     text-decoration: none;
     background-color: transparent;
 }
-.bi-arrow-left-square-fill{
+footer a:hover{
+    color: #FF289B9C !important;
+}
+.bi-caret-right-fill{
     font-size: 3em;
     color: rgb(250, 250, 250);
 }
-.bi-arrow-right-square-fill{
+.bi-caret-left-fill{
     font-size: 3em;
     color: rgb(250, 250, 250);
-}
-.bi-arrow-left-circle-fill{
-    font-size: 3em;
-    color: #971F5F;
-}
-.bi-arrow-right-circle-fill{
-    font-size: 3em;
-    color: #971F5F;
 }
 .owl-dots{
     display: none !important;
@@ -513,13 +707,7 @@ a{
     }
     .shop_by_category_card_titulo{
         margin-top: 20px !important;
-    }
-    #nav_logo{
-        height: 80px;
-        width: 80px;
-    }
-        
-    
+    }   
 }
 
 @media screen and (max-width: 650px){
@@ -554,10 +742,6 @@ a{
     .testimonials_panel_color_uno{
         display: none;
     }
-
-    .header_top{
-        display: none !important;
-    }
     
     .mb-3{
         margin-bottom: 0px !important;
@@ -574,7 +758,9 @@ a{
 
 }
 @media screen and (max-width: 470px){
-
+    #nav_logo{
+        width: 80px;
+    }
     .hero_top_boton{
         width: 200px !important;
     }
