--- a/css/contact.css
+++ b/css/contact.css
@@ -84,7 +84,7 @@ body{
 }
 
 .Newsletter_conctact{
-    background-color: #c711725e;
+    background: #971F5F17;
 }
 
 @media screen and (max-width: 500px){
