--- a/css/about.css
+++ b/css/about.css
@@ -43,6 +43,7 @@ body{
 }
 .about_informacion article{
     margin-top:30px ;
+    text-align: justify;
 }
 .about_informacion article h6{
     font-family: Poppins-ExtraBoldItalic;
@@ -129,75 +130,12 @@ body{
         flex-direction: column !important; 
     }
     .about_caracteristicas ul li{
-        flex-direction: column !important; 
-}
-/* @media screen and (max-width: 800px){
-    .about_caracteristicas ul{
-        flex-direction: column !important; 
-    }
-    .about_caracteristicas ul li{
-        flex-direction: column !important; 
-    }
+        flex-direction: column !important;
+    } 
 }
 
-@media screen and (max-width: 650px){
-    .about_us_caracteristicas{
-        margin-top: 1000px;
-        height: 300px;
-        width: 60%;     
-    }
-    .about_us_contenido_contenedor{
-        width: 100%;
-        height: 1000px;
-    }
-    
-    .w-50 {
-        width: 100%!important;
-    }
-}
 @media screen and (max-width: 500px){
-    .about_us_caracteristicas{
-        margin-top: 1200px;
-        height: 300px;
-        width: 60%;     
+    .about_titulo{
+        font-size:30PX;
     }
-    .about_us_contenido_contenedor{
-        width: 100%;
-        height: 1200px;
-        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
-    }
-    .about_us_contenido_contenedor{
-        width: 100%;
-        height: 1500px;
-        padding: 20px;   
-    }
-    .about_us_informacion{
-        width: 100%;
-    }
-    .about_us_contenido_contenedor {
-        height: 1000px;
-    }
-    .about_us_caracteristicas{
-        margin-top: 800px;
-    }
-    #nav_logo{
-        height: 80px;
-        width: 80px;
-    }
-    .mb-3{
-        margin-bottom: 0px !important;
-    }
-    
 }
-@media screen and (max-width: 470px){
-    .about_us_contenido_contenedor {
-        height: 1200px;
-    }
-    .about_us_caracteristicas{
-        margin-top: 1000px;
-    }
-    .about_us_titulo_img {
-        height: 30px !important;
-        width: 60px !important;
-    }
-} */
