--- a/css/shop.css
+++ b/css/shop.css
@@ -50,3 +50,15 @@ body{
     background: #971F5F17;
 
 }
+
+@media screen and (max-width: 500px){
+    .best_sellers_card{
+        width: 240px !important;
+        transform: skew(0deg, 0deg);
+    }
+    .best_sellers_card-body {
+        width: 220px !important;
+        margin-top: 110%;
+        margin-left: 20%;
+    }
+}
