--- a/css/styles.css
+++ b/css/styles.css
@@ -44,8 +44,8 @@ body{
 .nav-link:hover{
     color: #da117c !important;
 }
-.collapse{
-    display: none !important;
+nav .collapse{
+   display: none !important;
 }
 .nav_redes_sociales {
     color: white !important;
@@ -155,7 +155,7 @@ video{
 }
 .best_sellers_titulo{
     font-family: Poppins-BoldItalic;
-    font-size: 45px;
+    font-size: 40px;
     font-style: italic;
     line-height: 68px;
     letter-spacing: 0em;
@@ -254,11 +254,11 @@ video{
 }
 .about_us_titulo{
     font-family: Poppins-BoldItalic;
-    font-size: 45px;
+    font-size: 40px;
     font-style: italic;
     line-height: 68px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: justify;
     color: #FFFFFF;
 
 }
@@ -271,16 +271,16 @@ video{
     font-size: 25px;
     line-height: 38px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: justify;
     color: #FFFFFF;
     display: inline !important;
 }
 .about_us_informacion article p{
     font-family: Ubuntu-BoldItalic;
-    font-size: 16px;
+    font-size: 17px;
     line-height: 18px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: justify;
     display: inline !important;
     color: #FFFFFF;
 }
@@ -308,27 +308,25 @@ video{
 
 .about_us_img{
     position: absolute;
-    height: 90%;
-    width: 50%;
+    height: 85%;
+    width: 45%;
     right: 0px;
     margin-bottom:50px ;
     border-radius: 30px;
     clip-path: polygon(26% 0 , 100% 0 , 100% 70%, 90% 100%, 0 100%);
     z-index: 0;
 }
-
-
 .about_us_caracteristicas{
     position: absolute;
     height: 100px;
-    width: 680px;
+    width: 560px;
     right: 0px;
     border-radius: 25px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px 0px #00000040;
     z-index: 100px;
-    margin-top: 600px;
-    margin-right: 15%;
+    margin-top: 640px;
+    margin-right: 4%;
 }
 
 .about_us_caracteristicas ul li div{
@@ -364,7 +362,7 @@ video{
 }
 .shop_by_category_titulo{
     font-family: Poppins-BoldItalic;
-    font-size: 45px;
+    font-size: 40px;
     line-height: 68px;
     letter-spacing: 0em;
     text-align: left;
@@ -392,7 +390,7 @@ video{
 
 }
 .shop_by_category_card_titulo{
-    height: 45px;
+    height: 40px;
     width: 279.5px;
     border-radius: 10px;
     background: linear-gradient(90deg, #300537 9.44%, #971F5F 97.67%);
@@ -440,14 +438,14 @@ video{
 .testimonials{
     margin-top: 100px !important;
     width: 100%;
-    height: 70%;
+    height: 39rem;
     border-radius: 0px;
     background: #971F5F17;
 
 }
 .testimonials_titulo{
     font-family: Poppins-BoldItalic;
-    font-size: 45px;
+    font-size: 40px;
     line-height: 68px;
     letter-spacing: 0em;
     text-align: left;
@@ -455,17 +453,17 @@ video{
 }
 .testimonials_informacion{
     font-family: Ubuntu-BoldItalic;
-    font-size: 16px;
-    line-height: 18px;
+    font-size: 18px;
+    line-height: 20px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: justify;
 }
 .testimonials_informacion h6{
     font-family: Ubuntu-BoldItalic;
     font-size: 25px;
-    line-height: 29px;
+    line-height: 20px;
     letter-spacing: 0em;
-    text-align: left;
+    text-align: justify;
 }
 .testimonials_informacion button{
     height: 52px;
@@ -479,28 +477,28 @@ video{
     line-height: 38px;
     letter-spacing: 0em;
     text-align: center;
-    transform: skew(-20deg, 0deg);
+    transform: skew(-20deg, 0deg)
 
 }
 .testimonials_panel_color_uno{
-    height: 75%;
-    width: 700px;
+    height: 42rem;
+    width: 35rem;
     border-radius: 0px;
     background: linear-gradient(180deg, #300537 16.04%, #971F5F 116.04%);
     clip-path: polygon(100% 0, 100% 42%, 67% 100%, 0 100%, 58% 0);
     position: absolute;
     right: 0px;
-    margin-top: -7%;
+    margin-top: -6rem;
 }
 .testimonials_panel_color_dos{
-    height: 300px;
-    width: 200px;
+    height: 16rem;
+    width: 8rem;
     border-radius: 0px;
     background: linear-gradient(180deg, #300537 16.04%, #971F5F 116.04%);
     clip-path: polygon(100% 0, 0% 100%, 100% 100%);
     position: absolute;
     right: 0px;
-    margin-top: 260px;
+    margin-top: 20rem;
 
 }
 .testimonials_boton{
@@ -535,13 +533,13 @@ video{
 .owl-nav{
     display: flex;
     justify-content: end;
-    margin-right: 20%;
+    margin-right: 23%;
 }
 /*------- Subscribe_to_Newsletter -------*/
 
 .Subscribe_to_Newsletter h2{
     font-family: Poppins-BoldItalic;
-    font-size: 45px;
+    font-size: 40px;
     line-height: 68px;
     letter-spacing: 0em;
     text-align: left;
@@ -654,7 +652,6 @@ footer a:hover{
     display: none !important;
 }
 
-
 @media screen and (max-width: 1200px){
 
     .shop_by_category_card_img{
@@ -673,7 +670,28 @@ footer a:hover{
         box-shadow: 0px 4px 4px 0px #00000040;
     }
 }
-    
+@media screen and (max-width: 1000px) {
+    .testimonials {
+        height: 42rem;
+    }
+    .testimonials_panel_color_uno{
+        height: 45rem;
+       
+    }
+    .testimonials_panel_color_dos{
+        height: 19rem;     
+    }
+    .about_us_caracteristicas {
+        height: 115px;
+        width: 350px;
+    }
+    .about_us_caracteristicas ul{
+        padding-top: 1rem;
+    }
+    .about_us_caracteristicas ul li{
+        flex-direction: column !important;
+    }
+}
 @media screen and (max-width: 950px){
 
     .shop_by_category_container{
@@ -690,27 +708,98 @@ footer a:hover{
     }
     .shop_by_category_card_titulo{
         margin-top: 20px !important;
-    }   
+    }
+    .shop_by_category_boton_contenedor{
+        justify-content: center !important;
+        margin-top: 20px;
+    } 
 }
-
+@media screen and (max-width: 800px){
+    .testimonials_item{
+        flex-direction: column !important;
+        justify-content: center;
+        align-items: center;
+    }
+    .testimonials_informacion{
+        margin-top: 0px !important;
+        background-color: #68124083;
+        color: white;
+        letter-spacing: 0.1em;
+        padding: 20px !important;
+    }
+    .testimonials {
+        height: 68rem;
+    }
+    .testimonials_panel_color_uno{
+        height: 71rem;
+       
+    }
+    .testimonials_panel_color_dos{
+        margin-top: 31rem;
+        height: 34rem;     
+    }
+    .about_us {
+        flex-direction: column;
+    }
+    .about_us_img{
+        display: none;
+    }
+    .about_us_caracteristicas {
+        position: relative;
+        margin: 0px;
+    }
+    .about_us_contenido_contenedor{
+        width: 100%;
+        height: max-content;
+        clip-path:none;
+    }
+    .about_us {
+        justify-content: center;
+        align-items: center;
+    }
+    .about_us_informacion{
+        width: 100% !important;
+    }
+    .about_us_contenido_contenedor{
+        padding: 50px 0px !important;
+    }
+}
 @media screen and (max-width: 650px){
     .hero_redes_sociales {
         margin-right: 40%;
         z-index: 100;
     }
-
-    .testimonials_panel_color_uno{
-        display: none;
-    }
     .w-50 {
         width: 100%!important;
-    }
-    .testimonials_titulo {
-        font-size: 30px;
     }
     .testimonials_informacion button{
         width: 200px;
     }
+    .testimonials {
+        height: 60rem;
+    }
+    .testimonials_panel_color_uno{
+        display: none;
+       
+    }
+    .testimonials_panel_color_dos{
+       display: none;   
+    }
+    .owl-nav{
+        margin-right: 35%;
+    }
+    .bi-caret-right-fill {
+        color: #971F5F;
+    }
+    .bi-caret-left-fill {
+        color: #971F5F;
+    }
+    .testimonials_informacion{
+        background-color: transparent;
+        color: #971F5F;
+        letter-spacing: 0.1em;
+        padding: 20px !important;
+    } 
 }
 @media screen and (max-width: 500px){
 
@@ -721,22 +810,34 @@ footer a:hover{
         font-size: 20px;
         width: 100px
     }
-
-    .testimonials_panel_color_uno{
-        display: none;
-    }
-    
     .mb-3{
         margin-bottom: 0px !important;
     }
     .Subscribe_to_Newsletter form input{
         margin-bottom: 15px;
     }
-    .about_us_titulo_img{
-        display: none;
+    .testimonials_titulo, 
+    .about_us_titulo ,
+    .best_sellers_titulo,
+    .shop_by_category_titulo{
+        font-size: 30px;
     }
-    .testimonials_titulo {
-        font-size: 32px;
+    .Subscribe_to_Newsletter h2{
+        font-size: 30px;
+        text-align: center;
+    }
+    .best_sellers_card{
+        width: 240px !important;
+        transform: skew(0deg, 0deg);
+    }
+    .best_sellers_card-body {
+        width: 220px !important;
+        margin-top: 110%;
+        margin-left: 20%;
+    }
+    .icon_carrito {
+        top: 145px;
+        left: 170px
     }
 
 }
@@ -746,5 +847,16 @@ footer a:hover{
     }
     .hero_top_boton{
         width: 200px !important;
+    }
+    .testimonials {
+        height: 69rem;
+    }
+    .about_us_caracteristicas ul {
+        flex-direction: column !important;
+    }
+    .about_us_caracteristicas{
+        height: max-content;
+        width: max-content;
+        padding: 5px ;
     }
 }
