--- a/css/styles.css
+++ b/css/styles.css
@@ -800,6 +800,13 @@ footer a:hover{
         letter-spacing: 0.1em;
         padding: 20px !important;
     } 
+    footer ul{ 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
 }
 @media screen and (max-width: 500px){
 
