--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,6 @@ video{
 }
 
 .best_sellers_boton{
-    margin-top: 20px;
     height: 52px;
     width: 274px;
     border-radius: 15px;
@@ -373,16 +372,16 @@ video{
 }
 
 .shop_by_category_card_img{
-    height: 366px;
-    width: 351.24383544921875px;
+    height: 360px;
+    width: 350px;
     border-radius: 50px;
     border: 1px solid #E4E4E4;
     box-shadow: 0px 4px 4px 0px #00000040;
     transform: skew(-10deg, 0deg);
 }
 .shop_by_category_card_img img{
-    height: 366px;
-    width: 351.24383544921875px;
+    height: 360px;
+    width: 350px;
     border-radius: 50px;
     object-fit: cover;
     border: 1px solid #E4E4E4;
@@ -411,10 +410,10 @@ video{
     margin-top: -20%;
 }
 .shop_by_category_boton{
-    margin-top: 10px;
+    margin-top: 5px;
     height: 52px;
     width: 274px;
-    right: 30px;
+    margin-right: 20%;
     border-radius: 15px;
     background: #FF9900;
     box-shadow: -4px 3px 0px 0px #30053780;
@@ -651,6 +650,7 @@ footer a:hover{
 .owl-dots{
     display: none !important;
 }
+
 
 @media screen and (max-width: 1200px){
 
