--- a/css/styles.css
+++ b/css/styles.css
@@ -235,7 +235,6 @@ video{
     padding: 50px 0px;
     padding-right: 30%; 
     clip-path: polygon(0 1%, 100% 0, 70% 100%, 0% 100%);
-    margin-top: 10%;
 }
 .about_us_titulo{
     font-family: Poppins-BoldItalic;
@@ -335,8 +334,7 @@ video{
     border-radius: 0px;
 }
 .about_us_titulo_img {
-    height: 50px !important;
-    width: 100px !important;
+    margin-right:5px ;
 }
 
 /*------ Shop by category ------*/
