--- a/css/about.css
+++ b/css/about.css
@@ -41,9 +41,10 @@ body{
 video{
     height: 60vh;
 }
-
+.hero_panel_color_uno{
+    right: 60px;
+}
 /*--------main----------*/
-
 
 
 /*------ About Us ------*/
