--- a/css/styles.css
+++ b/css/styles.css
@@ -260,26 +260,22 @@ video{
     width: 30%;
     background:#681240 40.89%;
 }
-.contenedor_titulo_uno{
+.about_us_titulo {
+    font-size: 30px;
     font-family: Poppins-BoldItalic;
-    font-size: 40px;
+    font-size: 40px !important;
     font-style: italic;
     line-height: 68px;
     letter-spacing: 0em;
     text-align: justify;
     color: #FFFFFF;
+}
+.contenedor_titulo_uno{
     z-index: 10;
     left: 0px;
     margin-top: 2rem;
 }
 .contenedor_titulo_dos{
-    font-family: Poppins-BoldItalic;
-    font-size: 40px;
-    font-style: italic;
-    line-height: 68px;
-    letter-spacing: 0em;
-    text-align: justify;
-    color: #FFFFFF;
     z-index: 10;
     left: 0px;
     display: none !important;
@@ -972,7 +968,7 @@ footer a:hover{
     .about_us_titulo ,
     .best_sellers_titulo,
     .shop_by_category_titulo{
-        font-size: 30px;
+        font-size: 30px !important;
     }
     .Subscribe_to_Newsletter h2{
         font-size: 30px;
