--- a/css/contact.css
+++ b/css/contact.css
@@ -36,10 +36,10 @@ body{
     height: 60vh !important;
 }
 .hero_panel_color_uno{
-    height: 60% !important;
+    height: 60vh !important;
 }
 .hero_panel_color_dos{
-    height: 60% !important;
+    height: 60vh !important;
 }
 video{
     height: 60vh;
