--- a/css/preguntasF.css
+++ b/css/preguntasF.css
@@ -42,7 +42,7 @@ video{
     height: 60vh;
 }
 .hero_panel_color_uno{
-    right: 60px;
+    right: 175px !important;; 
 }
 /*-----preguntas section-----*/
 .preguntas_frecuentes{
