--- a/css/shop.css
+++ b/css/shop.css
@@ -41,7 +41,7 @@ video{
     height: 60vh;
 }
 .hero_panel_color_uno{
-    right: 60px;
+    right: 175px !important;; 
 }
 /*-------------- Shop -----------*/
 .shop_titulo{
