--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ body{
 /*------header------*/
 .header_color{
     background-color: white;
+    box-shadow: -2px 0px 8px #3b3b3b;
 }
 .navbar{
     top: 0px;
@@ -94,21 +95,30 @@ video{
 .hero_top_boton:hover{
     background: #ff790c;
 }
+.hero_panel_color_cuadrado{
+    position: absolute;
+    width: 500px;
+    height: 100vh;
+    background: linear-gradient(180deg, rgb(48, 5, 55) 0%, rgb(151, 31, 95) 100%);
+    clip-path: polygon(64% 0, 100% 0, 100% 100%, 0% 100%);;
+}
 .hero_panel_color_uno{
     width: 30%;
-    right: 180px;
+    right: 240px;
     top: 0px;
     background: linear-gradient(180deg, rgba(48, 5, 55, 0.8) 0%, rgba(151, 31, 95, 0.8) 100%);
     border-radius: 20px; 
     transform: skew(-20deg, 0deg);
 }
 .hero_panel_color_dos{
-    right: 0px;
-    width: 43%;
+    width: 18%;
+    right: 250px;
     top: 0px;
-    background: linear-gradient(180deg, rgb(48, 5, 55) 0%, rgb(151, 31, 95) 100%);
-    clip-path: polygon(80% 0, 100% 0, 100% 100%, 0 100%);
+    background: linear-gradient(180deg, rgba(48, 5, 55) 0%, rgba(151, 31, 95) 100%);
+    border-radius: 20px; 
+    transform: skew(-20deg, 0deg);
 }
+
 .hero_redes_sociales_item{
     height: 40px !important;
     width: 40px !important;
@@ -181,7 +191,12 @@ video{
     box-shadow: 0px 4px 4px 0px #00000040;
     transform: skew(-10deg, 0deg);
 }
-
+.best_sellers_card > img{
+    transform: skew(10deg, 0deg) !important;
+}
+.best_sellers_card > div{
+    transform: skew(10deg, 0deg) !important;
+}
 .best_sellers_card img{
     height: 195px;
     width: 202px !important;
@@ -200,7 +215,7 @@ video{
 .best_sellers_card-body{
     position: absolute;
     height: 45px;
-    width: 279.5px;
+    width: 250px;
     border-radius: 10px;
     padding: 5px;
     line-height: 37.5px;
@@ -241,18 +256,18 @@ video{
 /*------ About Us ------*/
 
 .about_us_contenido_contenedor{
-    height: 564px;
+    height: 590px !important;
     width: 80%;
     background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 77.42%);
-    padding: 50px 0px;
+    padding: 50px 0px; 
     padding-right: 0%; 
     transform: skew(-20deg, 0deg);
-    border-radius: 0px 0px 50px 0px;; 
+    border-radius: 0px 0px 20px 0px;; 
     
 }
 
 .cuadrado{
-    height: 564px;
+    height: 590px;
     width: 30%;
     background:#681240 40.89%;
 }
@@ -281,23 +296,25 @@ video{
     padding-right: 25%;
     transform: skew(20deg, 0deg);
 }
-.about_us_informacion article h6{
-    font-family: Poppins-ExtraBoldItalic;
-    font-size: 25px;
-    line-height: 38px;
-    letter-spacing: 0em;
-    text-align: justify;
-    color: #FFFFFF;
-    display: inline !important;
+.about_us_informacion article{
+    margin-top: 15px ;
+    
 }
-.about_us_informacion article p{
-    font-family: Ubuntu-BoldItalic;
-    font-size: 17px;
+.about_us_informacion article .parrafo::first-letter{
+    font-size: 2rem !important;
     line-height: 18px;
     letter-spacing: 0em;
     text-align: justify;
     display: inline !important;
-    color: #FFFFFF;
+    color: #FFFFFF !important;
+}
+.about_us_informacion article{
+    font-family: Ubuntu-BoldItalic;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: justify;
+    display: inline !important;
+    color: #FFFFFF !important;
 }
 
 .about_us_boton{
@@ -339,6 +356,7 @@ video{
     z-index: 100;
     margin-top: 450px;
     margin-right: 20px;
+    transform: skew(-10deg, 0deg);
 }
 
 .about_us_caracteristicas ul li div{
@@ -381,7 +399,35 @@ video{
 .shop_by_category_container{
     margin-top: -4% !important;
 }
-
+.shop_by_category_card{
+    margin: 0px 5px ;
+}
+.sombra_card1{
+    position: absolute;
+    margin-right:20px ;
+    margin-top: 5px;
+    width: 360px;
+    height: 370px;
+    background: #300537;
+    border: 1px solid #E4E4E4;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 50px;
+    transform: skew(-10deg, 0deg);
+}
+.sombra_card{
+    position: absolute;
+    margin-right:20px ;
+    margin-top: -65px;
+    width: 360px;
+    height: 370px;
+    background: #300537;
+    border: 1px solid #E4E4E4;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 50px;
+    transform: skew(-10deg, 0deg);
+}
 .shop_by_category_card_img{
     height: 360px;
     width: 350px;
@@ -390,6 +436,7 @@ video{
     box-shadow: 0px 4px 4px 0px #00000040;
     transform: skew(-10deg, 0deg);
 }
+
 .shop_by_category_card_img img{
     height: 360px;
     width: 350px;
@@ -551,6 +598,12 @@ video{
     height: 300px !important;
     width: 220px !important;
 }
+.testimonials_card > img {
+    transform: skew(10deg, 0deg) !important;
+}
+.testimonials_card > div {
+    transform: skew(10deg, 0deg) !important;
+}
 .testimonials_card-body{
     width: 210px !important;
     margin-top: 100% !important;
@@ -565,10 +618,14 @@ video{
 .owl-nav{
     display: flex;
     justify-content: end;
-    margin-right: 23%;
+    margin-right: 13%;
 }
 /*------- Subscribe_to_Newsletter -------*/
+.Subscribe_to_Newsletter{
+    margin-top: 30px !important; ;
+    margin-bottom: 30px  !important;
 
+}
 .Subscribe_to_Newsletter h2{
     font-family: Poppins-BoldItalic;
     font-size: 40px;
@@ -738,6 +795,14 @@ footer a:hover{
         border: 1px solid #E4E4E4;
         box-shadow: 0px 4px 4px 0px #00000040;
     }
+    .sombra_card1 {
+        width: 250px;
+        height: 207px;
+    }
+    .sombra_card {
+        width: 250px;
+        height: 200px;
+    }
     .about_us_caracteristicas {
         height: 115px;
         width: 350px;
@@ -778,6 +843,15 @@ footer a:hover{
     .shop_by_category_card{
         margin-top: 30px !important;
     }
+    .sombra_card1 {
+        width: 250px;
+        height: 207px;
+    }
+    .sombra_card {
+        width: 250px;
+        height: 200px;
+        margin-top: -38px !important;
+    }
     .owl-carousel .owl-dots.disabled, .owl-carousel .owl-nav.disabled{
         display: block !important;
     }
@@ -801,6 +875,11 @@ footer a:hover{
 @media screen and (max-width: 900px){
     .about_us {
         flex-direction: column;
+        background: linear-gradient(82.98deg, #681240 40.89%, #971F5F 77.42%);;
+        padding: 10px 0px;
+    }
+    .about_us_contenido_contenedor{
+        height: max-content !important;
     }
     .svg{
         display: none;
@@ -829,7 +908,7 @@ footer a:hover{
         padding-right: 0px !important;
     }
     .about_us_contenido_contenedor{
-        padding: 50px 0px !important;
+        padding: 20px 0px !important;
     }
     .cuadrado{
         display: none;
@@ -842,6 +921,12 @@ footer a:hover{
     }
 }
 @media screen and (max-width: 830px){
+    .hero_top_titulo{
+        font-size: 60px;
+    }
+    .hero_panel_color_cuadrado{
+        display: none;
+    }
     .hero_panel_color_dos{
         display: none;
     }
@@ -887,7 +972,15 @@ footer a:hover{
         height: 38rem ;
     }
     .owl-nav{
-        margin-right: 38%;
+        justify-content: center;
+        margin-top: 30px !important;
+        margin-right: 0px;
+    }
+    .bi-caret-right-fill {
+        color: #c26e9b;
+    }
+    .bi-caret-left-fill {
+        color: #c26e9b;
     }
     
 }
@@ -909,11 +1002,12 @@ footer a:hover{
     .testimonials_panel_color_dos{
        display: none;   
     }
-    .owl-nav{
-        margin-right: 35%;
-    }
+
     .testimonials .owl-stage-outer{
         height: 36rem ;
+    }
+    .owl-nav button{
+        width: max-content !important;
     }
     .bi-caret-right-fill {
         color: #971F5F;
@@ -938,12 +1032,27 @@ footer a:hover{
 }
 @media screen and (max-width: 575px){
     .navbar-collapse{
-        background-color: rgba(255, 255, 255, 0.349);
+        background-color: rgba(255, 255, 255, 0.603);
         backdrop-filter: blur(3px);
         border-radius: 5px;
+        top: 100px;
+        width: 80%;
+        max-width: 100%;
+        position: fixed;
+        left: 10%;
     }
 }
 @media screen and (max-width: 500px){
+    .testimonials_titulo {
+        font-size: 25px !important;
+    }
+    .hero button{
+        width: 200px !important;
+    }
+    main button{
+        width: 200px !important;
+    }
+  
 
     .hero_top_titulo{
         font-size: 40px;
@@ -955,7 +1064,9 @@ footer a:hover{
     .mb-3{
         margin-bottom: 0px !important;
     }
-    .testimonials_titulo, 
+    .footer_b img{
+        margin: 0px 5px;
+    } 
     .about_us_titulo ,
     .best_sellers_titulo,
     .shop_by_category_titulo{
@@ -967,7 +1078,13 @@ footer a:hover{
     }
     .best_sellers_card{
         width: 240px !important;
-        transform: skew(0deg, 0deg);
+        transform: skew(0deg, 0deg) ;
+    }
+    .testimonials_card > img {
+        transform: skew(0deg, 0deg) !important;
+    }
+    .testimonials_card > div {
+        transform: skew(0deg, 0deg) !important;
     }
     .best_sellers_card-body {
         width: 220px !important;
@@ -984,6 +1101,12 @@ footer a:hover{
     .testimonials_card-body {
         margin-top: 95% !important;
     }
+    .best_sellers_card > img{
+        transform: skew(0deg, 0deg) !important;
+    }
+    .best_sellers_card > div{
+        transform: skew(0deg, 0deg) !important;
+    }
 
 }
 @media screen and (max-width: 470px){
@@ -997,6 +1120,7 @@ footer a:hover{
         height: max-content;
         width: max-content;
         padding: 5px ;
+        transform: skew(0deg, 0deg) ;
     }
     .testimonials .owl-stage-outer{
         height: 44rem ;
